# orion

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CODING_STANDARDS.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.txt  vcpkg.json
.github/: WINDOWS_GIT_SETUP.md  copilot-instructions.md  pull_request_template.md  task_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/agents/: code-quality-refactor.agent.md  code-reviewer.agent.md  performance-optimizer.agent.md
.github/instructions/: adaptive_ci_loop.md  build.md  code_review_checklist.md  run_clang_tidy.md  run_perf_tests.md  run_tck_tests.md  run_unit_tests.md
.github/prompts/: add_dmn_feature.md  fix_bug.md  improve_perf.md  improve_quality.md
.github/tasks/: 12_improve_orion_documentation.md  ci_release_workflow.md  ci_tck_regression_detection.md  perf_reduce_allocations.md  publish_repo.md  quality_catch_all_removal.md  quality_string_view_usage.md  unit_test_selective_tck.md
.github/workflows/: README.md  ci-fast.yml  ci-full.yml  quality-clang-tidy.yml  quality-format.yml  release.yml
cmake/: orionConfig.cmake.in
dat/dmn-tck/TestResults/Orion/0.1.0/: tck_results.csv  tck_results.properties
dat/tck-baselines/: README.md
dat/tck-baselines/1.0.0/: tck_results.csv  tck_results.properties
dat/tck-baselines/1.1.0/: tck_results.csv  tck_results.properties
dat/tst/: test_abs.dmn
dat/tst/dmn-tck-extra/0120-variable-resolution/: 0120-variable-resolution-test-01.xml  0120-variable-resolution.dmn  README.md
dat/tst/dmn-tck-extra/0121-type-conversion/: README.md  type-conversion-test.xml  type-conversion.dmn
dat/tst/dmn-tck-extra/0122-input-allowed-values/: 0122-input-allowed-values.dmn  testCases.xml
dat/tst/dmn-tck-extra/0123-ternary-logic/: 0123-ternary-logic.dmn  README.md  testCases.xml
dat/tst/dmn-tck-extra/0124-arithmetic-null/: 0124-arithmetic-null.dmn  README.md  testCases.xml
dat/tst/dmn-tck-extra/0125-input-data-number-simple/: 0125-input-data-number-simple-test-01.xml  0125-input-data-number-simple.dmn
dat/tst/dmn-tck-extra/0126-logical-variable-resolution/: 0126-logical-variable-resolution-test-01.xml  0126-logical-variable-resolution.dmn  README.md
docs/: ai-dev-story.md  architecture.md  copilot_instructions.md  formal-24-01-01.txt  testing.md
docs/examples/: bre_stateful_usage.cpp
docs/examples/consumer-project/: CMakeLists.txt  README.md  build.bat  build.ps1  build.sh  main.cpp  vcpkg.json
include/orion/api/: boost_test_logger.hpp  dmn_enums.hpp  engine.hpp  logger.hpp  spdlog_logger.hpp
include/orion/bre/: ast_node.hpp  bkm_manager.hpp  business_knowledge_model.hpp  contract_violation.hpp  dmn_model.hpp  dmn_parser.hpp
include/orion/bre/feel/: evaluator.hpp  expr.hpp  function_registry.hpp  functions.hpp  lexer.hpp  parameter_binder.hpp  parser.hpp  types.hpp  unary.hpp
include/orion/common/: xml2json.hpp
ports/orion/: portfile.cmake  usage  vcpkg.json
src/api/: boost_test_logger.cpp  engine.cpp  logger.cpp  spdlog_logger.cpp
src/apps/: orion_bre_main.cpp  orion_tck_runner.cpp
src/bench/: README.md  orion_bench.cpp  orion_bench_ast_vs_legacy.cpp
src/bre/: README_ORION_BRE.md  ast_node.cpp  bkm_manager.cpp  business_knowledge_model.cpp  dmn_model.cpp  dmn_parser.cpp
src/bre/feel/: evaluator.cpp  expr.cpp  function_registry.cpp  functions.cpp  lexer.cpp  parameter_binder.cpp  parser.cpp  types.cpp  unary.cpp  util.cpp  util_internal.hpp
src/common/: log.cpp  log.hpp  util.cpp  util.hpp  xml2json.cpp
tools/scripts/: autofix.ps1  compare_benchmarks.ps1  compare_benchmarks.py  list-project-files.ps1  orion_bench_smoke.sh  run-clang-tidy.ps1  setup-clang-tidy.ps1
tst/bre/: test_hit_policy_debug.cpp  test_main.cpp
tst/bre/feel/: test_conditional_expressions.cpp  test_debug_not_function.cpp  test_dmn_abs_named_params.cpp  test_evaluator_builtin_math.cpp  test_evaluator_exponentiation.cpp  test_evaluator_function_calls.cpp  test_evaluator_list_operations.cpp  test_evaluator_logical_operators.cpp  test_evaluator_math_debug.cpp  test_evaluator_math_direct.cpp  test_evaluator_math_edge_cases.cpp  test_evaluator_negative_numbers.cpp  test_evaluator_null_arithmetic.cpp  test_evaluator_property_access.cpp  test_feel_segfault_debug.cpp  test_function_registry.cpp  test_lexer.cpp  test_lexer_decimal_numbers.cpp  test_named_parameters.cpp  test_parser.cpp  test_parser_subtraction.cpp  test_tck_abs_debug.cpp  test_tck_named_params_quick.cpp
tst/bre/tck/: test_tck_0112_collection.cpp  test_tck_0112_comparison.cpp  test_tck_0112_rule_order.cpp  test_tck_0118_priority.cpp  test_tck_runner.cpp
tst/common/: test_xml2json.cpp
